--- a/app/views/welcome.twig
+++ b/app/views/welcome.twig
@@ -9,7 +9,7 @@
 
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
-        <link href="css/style.css" rel="stylesheet">
+        <link href="{{ url('css') }}/style.css" rel="stylesheet">
 
     </head>
     <body>
