--- a/app/views/404.twig
+++ b/app/views/404.twig
@@ -1,1 +1,22 @@
-<h1>Ooops..Request not found!</h1>
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+
+        <link href="{{ url('css') }}/style.css" rel="stylesheet">
+
+    </head>
+    <body>
+        <section id="not-found" class="not-found">
+
+            <h1>Ooops..Request not found!</h1>
+            
+        </section>
+    </body>
+</html>
