--- a/app/views/welcome.twig
+++ b/app/views/welcome.twig
@@ -17,7 +17,7 @@
 
             <h1>MERIEL</h1>
             <h4>a knowable php framework</h4>
-            
+            <h1>USERS</h1>
             <ul>
             {% for user in users %}
                 <li>{{ user.name }}</li>
