--- a/app/views/404.twig
+++ b/app/views/404.twig
@@ -7,9 +7,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
-
-        <link href="{{ url('css') }}/style.css" rel="stylesheet">
+        <script src="{{ url('js') }}/app.js"></script>
+        <link href="{{ url('css') }}/app.css" rel="stylesheet">
 
     </head>
     <body>
