--- a/app/views/welcome.twig
+++ b/app/views/welcome.twig
@@ -7,10 +7,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        
-        <link href="{{ url('css') }}/style.css" rel="stylesheet">
+        <script src="{{ url('js') }}/app.js"></script>
+        <link href="{{ url('css') }}/app.css" rel="stylesheet">
         <script>
             $(function(){
                 
