--- a/app/views/welcome.twig
+++ b/app/views/welcome.twig
@@ -1,39 +1,29 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>MERIEL</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <script src="{{ url('js') }}/app.js"></script>
         <link href="{{ url('css') }}/app.css" rel="stylesheet">
-        <script>
-            $(function(){
-                
-                $.post('json',{}, function(response){
-                    console.log(response);
-                });
-                
-            });
-        </script>
     </head>
     <body>
-        <section id="intro" class="intro-section">
+    <section id="intro" class="intro-section container">
+        <div class="row">
+            <div class="col-md-12 col-xs-12">
+                <h1>WELCOME TO MERIEL :)</h1>
+                <h4>a knowable php framework</h4>
 
-            <h1>MERIEL</h1>
-            <h4>a knowable php framework</h4>
-            
-            {% include 'menu.twig' %}
-            
-            <h1>USERS</h1>
-            <ul>
-            {% for user in users %}
-                <li>{{ user.name }}</li>
-            {% endfor %}
-            </ul>
-            
-        </section>
+
+                <p></p>
+            </div>
+
+        </div>
+
+
+    </section>
     </body>
 </html>
